# tartan-bitfield

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl
.github/workflows/: build.yml  publish.yml
benches/: bitfield.rs
src/: lib.rs
tests/: bitfield.rs
