[package]
name = "tartan-bitfield"
version = "1.0.0"
authors = ["Tim Yates <cimbul@gmail.com>"]
edition = "2021"
description = "Define structures with accessors for particular bits or bit ranges"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cimbul/tartan-bitfield"
keywords = ["bitfields", "flags"]
categories = ["rust-patterns", "no-std"]

[dependencies]
paste = "1.0.0"

[dev-dependencies]
criterion = "0.3.3"
criterion-macro = "0.3.3"

[[bench]]
name = "bitfield"
harness = false
